--- a/muestra.html
+++ b/muestra.html
@@ -7,6 +7,34 @@
   <title>Document</title>
 </head>
 <body>
+
+
+<script>
+console.log("**********CREAR TABLA*********");
+        var divPrincipal = document.getElementById("seccionEstadistica");
+        var divCargas = document.createElement("DIV");
+        divCargas.setAttribute("class","cargoMixto");
+        var tabla = document.createElement("TABLE");
+        var filaPrincipal = document.createElement("TR");
+        var colCanal = document.createElement("TD");
+        colCanal.setAttribute("rowspan","2");
+        colCanal.innerText = datos[0];
+        var colCantidad = document.createElement("TD");
+        colCantidad.innerHTML = datos[1];
+        var filaSecundaria = document.createElement("TR");
+        var colPeso = document.createElement("TD");
+        colPeso.innerHTML= datos[2];
+        console.log("comienzo a conectar datos");
+        filaSecundaria.appendChild(colPeso);
+        tabla.appendChild(filaSecundaria);
+        filaPrincipal.appendChild(colCantidad);
+        filaPrincipal.appendChild(colCanal);
+        tabla.appendChild(filaPrincipal);
+        divPrincipal.appendChild(divCargas);
+        console.log(divPrincipal);
+        console.log(divCargas);
+        console.log(tabla);  
+</script>
   
 </body>
 </html>
