Actualización del día 18/02

--- a/centroverde.html
+++ b/centroverde.html
@@ -50,6 +50,9 @@
                 <div id = "validadorCamion" class = "divValidacion"></div>
                 <div class="inputCamion">
                   <div>
+                      <a id="candado" onclick="hacerCandado(this)"><img src="http://carlitos.com.ar/DGREC/image/rallamativo.png" style="width: 60px;" alt=""></a>
+                  </div>
+                  <div>
                       <h3 class="tituloInput">Fecha</h3>
                       <input type="date"  name="fecha" id="fecha" class = "fecha" onblur ="user.verificarFecha();" autofocus><br>
                   </div>
@@ -148,5 +151,4 @@
     </p>
   </footer>
 </body>
-
 </html>
